# rust-yt-dlp

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  backend.rs  config.rs  main.rs
