[package]
name = "rust-yt-dlp"
version = "0.1.0"
edition = "2021"
authors = ["Tim5500"]

[dependencies]
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
rfd = "0.14"
directories = "5.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }